src/objects/Auto_Payment_Arrangement__c.object
<CustomObject>
    <fields>
        <fullName>CXE_isForPurging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The indicator in the trigger to check if the file is for purging in S3.</description>
        <label>For Purging?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Download_URL__c</fullName>
        <description>HYPERLINK(
&apos;/apex/CXE_Heroku_Redirect?target=APA&amp;aid=&apos;+KEY_1+&apos;&amp;oid=&apos;+KEY_2+&apos;&amp;name=&apos;+ FILE_NAME
, FILE_NAME
, &apos;_blank&apos;
)</description>
        <formula>IF(AND(ISPICKVAL(Status__c, &apos;Available&apos;), $Profile.Name = &apos;Payment Operations&apos;), HYPERLINK( 
&apos;/apex/CXE_APADownload?id=&apos; &amp; Id, &apos;Download&apos;), &apos;Download Disabled&apos;)</formula>
        <label>Download URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Downloaded_Time__c</fullName>
        <label>Last Downloaded Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Downloaded</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Auto Payment Arrangement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Status__c</columns>
        <columns>Download_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APA-{000000}</displayFormat>
        <label>Auto Payment Arrangement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Payment Arrangements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>